--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<input type="text" name="your-uid" placeholder="Enter your name" required>
       <label><b>Email*</b></label>
 			<input type="email" name="your-email" placeholder="Email">
-      <br>
+      <br><br>
       <label><b>Select</b></label>
       <select type="text" name="kelas"  required>
         <option>---Option---</option>
@@ -34,19 +34,19 @@
         <option>Monthly 💎 - ৳ 735</option>
         <option>Level up pass 💎 - ৳ 160</option>
       </select> 
-      <br>
+      <br><br>
       <b>Payment Number:</b><br>
           <p id="number">01887711147</p>
           <button onclick="copyToClipboard()">Copy</button>
-        <br>
+        <br><br><br>
         <label><b>Method</b></label>
         <select name="method" id="method">
           <option>Select</option>
           <option>Bkash</option>
           <option>Nagad</option>
-        </select><br>
+        </select><br><br>
           
-      <label><b>Your Payment Number</b></label>
+      <label><b>Your Payment Number</b></label><br>
       <input type="number" name="phone-number" placeholder="Enter your Payment number" required>
       <label><b>Transection Id*</b></label>
       <input type="text" name="Transection" placeholder="Enter your Payment Transection Id">
