--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
       <label><b>UID</b></label>
 			<input type="text" name="your-name" placeholder="Enter your UID" required>
       <label><b>Game Name</b></label>
-			<input type="text" name="your-uid" placeholder="Enter your name" required>
+			/*<input type="text" name="your-uid" placeholder="Enter your name" required>
       <label><b>Email*</b></label>
-			<input type="email" name="your-email" placeholder="Email">
+			<input type="email" name="your-email" placeholder="Email">*/
       <br><br>
       <label><b>Select</b></label>
       <select type="text" name="kelas"  required>
         <option>---Option---</option>
         <option>25 Diamond 💎 - ৳ 23</option>
         <option>50 Diamond 💎 - ৳ 38</option>
-        <option>115 Diamond 💎 - ৳ 75</option>
+        <option>115 Diamond 💎 - ৳ 74</option>
         <option>240 Diamond 💎 -৳ 150</option>
         <option>355 Diamond 💎 - ৳ 240</option>
         <option>480 Diamond 💎 - ৳ 310</option>
@@ -30,7 +30,7 @@
         <option>1850 Diamond 💎 - ৳ 1145</option>
         <option>2530 Diamond 💎 - ৳ 1520</option>
         <option>5060 Diamond 💎 - ৳ 3000</option>
-        <option>Weekly 💎- ৳ 155</option>
+        <option>Weekly 💎- ৳ 150</option>
         <option>Monthly 💎 - ৳ 735</option>
         <option>Level up pass 💎 - ৳ 160</option>
       </select> 
@@ -48,12 +48,12 @@
           
       <label><b>Your Payment Number</b></label><br>
       <input type="number" name="phone-number" placeholder="Enter your Payment number" required>
-      <label><b>Transection Id*</b></label>
+      /*<label><b>Transection Id*</b></label>
       <input type="text" name="Transection" placeholder="Enter your Payment Transection Id">
           <br>
       <label><b>Description*</b></label>
 			<textarea name="message" rows="2" placeholder="Your Message"></textarea>
-			<input type="submit" value="Submit" id="submit">
+			<input type="submit" value="Submit" id="submit">*/
 		</form>
 	</div>
 
