--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
       <label><b>UID</b></label>
 			<input type="text" name="your-name" placeholder="Enter your UID" required>
       <label><b>Game Name</b></label>
-			/*<input type="text" name="your-uid" placeholder="Enter your name" required>
+			<input type="text" name="your-uid" placeholder="Enter your name" required>
       <label><b>Email*</b></label>
-			<input type="email" name="your-email" placeholder="Email">*/
       <br><br>
       <label><b>Select</b></label>
       <select type="text" name="kelas"  required>
@@ -48,12 +47,6 @@
           
       <label><b>Your Payment Number</b></label><br>
       <input type="number" name="phone-number" placeholder="Enter your Payment number" required>
-      /*<label><b>Transection Id*</b></label>
-      <input type="text" name="Transection" placeholder="Enter your Payment Transection Id">
-          <br>
-      <label><b>Description*</b></label>
-			<textarea name="message" rows="2" placeholder="Your Message"></textarea>
-			<input type="submit" value="Submit" id="submit">*/
 		</form>
 	</div>
 
