--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           
       <label><b>Your Payment Number</b></label><br>
       <input type="number" name="phone-number" placeholder="Enter your Payment number" required>
+			<input type="submit" value="Submit" id="submit">
 		</form>
 	</div>
 
